added redirect after login

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,11 @@
+@media (min-height: 320px) {
+    .ui.footer.form-page { 
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+    }
+}
+
 #login {
-    margin: auto;
+    max-width: 50%;
 }
