added full crud to user

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 @media (min-height: 320px) {
     .ui.footer.form-page { 
-      position: absolute;
+      position: relative;
       bottom: 0;
       width: 100%;
     }
